salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/FDR_Response__c.object-meta.xml
<CustomObject>
    <description>Tracks Foursquare Disaster Relief international response operations.</description>
    <label>FDR Response</label>
    <nameField>
        <label>Response Number</label>
        <type>AutoNumber</type>
        <displayFormat>FDR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>FDR Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>