salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>