salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code (ISO 2)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>