salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Disaster_Type__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Type__c</fullName>
    <label>Disaster Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complex Emergency</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Persecution</fullName>
            </value>
            <value>
                <fullName>Drought</fullName>
            </value>
            <value>
                <fullName>Extreme Cold</fullName>
            </value>
            <value>
                <fullName>Prevention, Preparedness + Training</fullName>
            </value>
            <value>
                <fullName>Refugee Care</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Hurricane/Typhoon</fullName>
            </value>
            <value>
                <fullName>Wildfire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>