salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/FMI_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>FMI_Global_Area__c</fullName>
    <label>FMI Global Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Latin America &amp; Caribbean</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; North Africa</fullName>
            </value>
            <value>
                <fullName>Asia Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>