salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/FMI_Region__c.field-meta.xml
<CustomField>
    <fullName>FMI_Region__c</fullName>
    <label>FMI Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Central America</fullName>
            </value>
            <value>
                <fullName>Northern South America</fullName>
            </value>
            <value>
                <fullName>Southern South America</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>MENACA</fullName>
            </value>
            <value>
                <fullName>East Africa</fullName>
            </value>
            <value>
                <fullName>West Africa/WAMCO</fullName>
            </value>
            <value>
                <fullName>Francophone West Africa</fullName>
            </value>
            <value>
                <fullName>Southern Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>