salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Grant_Funds_Provided__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funds_Provided__c</fullName>
    <label>Grant Funds Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>