salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Grants_Dispersed__c.field-meta.xml
<CustomField>
    <fullName>Grants_Dispersed__c</fullName>
    <label>Grants Dispersed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>