salesforce-fdr-dashboard/force-app/main/default/objects/FDR_Response__c/fields/Is_US_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Domestic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Domestic Response</label>
    <type>Checkbox</type>
</CustomField>